--- a/timberman2.vcxproj
+++ b/timberman2.vcxproj
@@ -105,12 +105,12 @@
       <PreprocessorDefinitions>
       </PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\bartl\Desktop\Projekty git\SFML-2.6.1\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\piech\Desktop\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\bartl\Desktop\Projekty git\SFML-2.6.1\lib;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\piech\Desktop\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -123,14 +123,14 @@
       <PreprocessorDefinitions>
       </PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\bartl\Desktop\Projekty git\SFML-2.6.1\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\piech\Desktop\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\bartl\Desktop\Projekty git\SFML-2.6.1\lib;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\piech\Desktop\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -138,7 +138,9 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Branch.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="CreditsState.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="HowToPlayyState.cpp" />
     <ClCompile Include="Lumberjack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuState.cpp" />
@@ -149,7 +151,9 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Branch.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="CreditsState.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="HowToPlayyState.h" />
     <ClInclude Include="Lumberjack.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="State.h" />
